k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-security-api
  namespace: spring-security
  labels:
    app: spring-security-api
spec:
  type: ClusterIP
  selector:
    app: spring-security-api
  ports:
    - name: http
      port: 80
      targetPort: http
